# minimal-cosmwasm

./: Cargo.toml  LICENSE  README.MD
artifacts/: checksums.txt  julian.wasm
examples/: schema.rs
schema/: execute_msg.json  listing.json  query_msg.json
src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
