[package]
name = "minimal"
version = "0.0.1"
authors = ["tacolopo"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
# backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

#cargo optimize
[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.16.1
"""

[dependencies]
cosmwasm-std = { version = "2.2.0" }
cosmwasm-storage = "1.5.2"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
is_false = "0.1.0"
schemars = "0.8.21"
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.11" }
cosmwasm-schema = "2.2.0"

[dev-dependencies]
cosmwasm-std = "2.2.0"
cw-multi-test = "2.2.0"
